@@ -43,7 +43,7 @@ function Edit-SD_AdminBehörigheter
 		if ($konton -ne "")
 		{
 			$konton | % {
-				Remove-MailboxPermission -Identity $_ -User $adminAccount.UserPrincipalName -AccessRights FullAccess -Confirm:$false
+				Remove-MailboxPermission -Identity $_ -User $adminAccount.UserPrincipalName -AccessRights FullAccess -Confirm:$false -WarningAction SilentlyContinue
 				Write-Host "Behörighet till $_ borttagen"
 			}
 			"" > $file
